--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,8 @@
     <title>Frontend Mentor | Space tourism website</title>
     {% tailwind_css %}
 </head>
-<body>
+<body class="relative">
+    {% include 'includes/navbar.html' %}
     {% block content %}
         <!-- Content -->
     {% endblock %}
